--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "generate-contributors": "all-contributors generate"
   },
   "dependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/tsc-wrapped": "4.2.6",
-    "@ionic-native/barcode-scanner": "4.0.0",
-    "@ionic-native/camera": "4.0.0",
-    "@ionic-native/card-io": "4.0.0",
-    "@ionic-native/core": "4.0.0",
-    "@ionic-native/diagnostic": "4.0.0",
-    "@ionic-native/geolocation": "4.0.0",
-    "@ionic-native/google-maps": "4.0.0",
-    "@ionic-native/splash-screen": "4.0.0",
-    "@ionic-native/status-bar": "4.0.0",
+    "@ionic-native/barcode-scanner": "3.7.0",
+    "@ionic-native/camera": "3.7.0",
+    "@ionic-native/card-io": "3.7.0",
+    "@ionic-native/core": "3.7.0",
+    "@ionic-native/diagnostic": "3.7.0",
+    "@ionic-native/geolocation": "3.7.0",
+    "@ionic-native/google-maps": "3.7.0",
+    "@ionic-native/splash-screen": "3.7.0",
+    "@ionic-native/status-bar": "3.7.0",
     "@ionic/storage": "2.1.3",
     "angular2-swing": "^0.12.1",
     "chart.js": "^2.4.0",
@@ -41,7 +41,6 @@
     "tslint-config-airbnb": "^5.2.1",
     "zone.js": "0.8.18",
     "cordova-android": "~6.1.2",
-    "card.io.cordova.mobilesdk": "https://github.com/card-io/card.io-Cordova-Plugin",
     "cordova-plugin-camera": "~2.3.1",
     "cordova-plugin-console": "1.0.5",
     "cordova-plugin-device": "1.1.4",
@@ -55,9 +54,9 @@
     "phonegap-plugin-barcodescanner": "~6.0.6"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.0",
+    "@ionic/app-scripts": "^2.1.4",
     "all-contributors-cli": "^4.5.0",
-    "typescript": "2.4.2"
+    "typescript": "~2.3.4"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
